--- a/mentalhealth-main/package.json
+++ b/mentalhealth-main/package.json
@@ -15,6 +15,7 @@
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "framer-motion": "^10.16.16",
+    "jodit-react": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
