--- a/mentalhealth-main/package.json
+++ b/mentalhealth-main/package.json
@@ -21,6 +21,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.1",
     "slate": "^0.101.5",
     "slate-history": "^0.100.0",
     "slate-react": "^0.101.5",
