--- a/mentalhealth-main/package.json
+++ b/mentalhealth-main/package.json
@@ -16,6 +16,7 @@
     "draft-js-export-html": "^1.4.1",
     "framer-motion": "^10.16.16",
     "jodit-react": "^4.0.4",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
