--- a/mentalhealth-main/package.json
+++ b/mentalhealth-main/package.json
@@ -15,12 +15,14 @@
     "date-fns": "^3.3.1",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "emoji-picker-react": "^4.7.10",
     "framer-motion": "^10.16.16",
     "jodit-react": "^4.0.4",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.1",
