--- a/mentalhealth-main/package.json
+++ b/mentalhealth-main/package.json
@@ -12,11 +12,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.3.1",
+    "dompurify": "^3.0.9",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "emoji-picker-react": "^4.7.10",
     "framer-motion": "^10.16.16",
+    "highcharts": "^11.4.0",
     "jodit-react": "^4.0.4",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
